--- a/fMailer.Domain/fMailer.Domain.csproj
+++ b/fMailer.Domain/fMailer.Domain.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ModelMappings\ContactMapping.cs" />
     <Compile Include="ModelMappings\ContactsGropMapping.cs" />
     <Compile Include="ModelMappings\DistributionMapping.cs" />
+    <Compile Include="ModelMappings\ForeignKeys.cs" />
     <Compile Include="ModelMappings\MailTemplateMapping.cs" />
     <Compile Include="ModelMappings\ReplyMapping.cs" />
     <Compile Include="ModelMappings\SessionMapping.cs" />
