--- a/fMailer.Web/packages.config
+++ b/fMailer.Web/packages.config
@@ -10,6 +10,7 @@
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.9.0.1" targetFramework="net40" />
   <package id="Knockout.Mapping" version="2.3.2" targetFramework="net40" />
+  <package id="Knockout.Validation" version="1.0.1" targetFramework="net40" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers" version="1.2" targetFramework="net40" />
