--- a/fMailer.Web/packages.config
+++ b/fMailer.Web/packages.config
@@ -12,6 +12,7 @@
   <package id="Knockout.Mapping" version="2.3.2" targetFramework="net40" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net40" />
   <package id="knockoutjs" version="2.1.0" targetFramework="net40" />
+  <package id="linq.js" version="2.2.0.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.1" targetFramework="net40" />
