--- a/fMailer.Web/Web.config
+++ b/fMailer.Web/Web.config
@@ -10,7 +10,7 @@
     <add key="UsePasswordsHashing" value="false" />
   </appSettings>
   <connectionStrings>
-    <add name="fMailerConnectionString" connectionString="Data Source=.\SQLExpress;Initial Catalog=fMailer;User ID=sa;Password=access2sql@;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="fMailerConnectionString" connectionString="Data Source=.;Initial Catalog=fMailer;User ID=sa;Password=access2sql@;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
