--- a/fMailer.Web/packages.config
+++ b/fMailer.Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="2.6.3.862" targetFramework="net40" />
   <package id="Autofac.Mvc4" version="2.6.2.859" targetFramework="net40" />
+  <package id="AutoMapper" version="2.2.0" targetFramework="net40" />
   <package id="Castle.Core" version="3.1.0" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net40" />
