--- a/fMailer.Web/packages.config
+++ b/fMailer.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="Castle.Core" version="3.1.0" targetFramework="net40" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net40" />
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net40" />
+  <package id="HigLabo" version="1.6.1.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
   <package id="jQuery" version="1.8.2" targetFramework="net40" />
   <package id="jQuery.UI.Combined" version="1.8.20.1" targetFramework="net40" />
@@ -29,7 +30,7 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="NHibernate" version="3.3.2.4000" targetFramework="net40" />
   <package id="RequireJS" version="2.1.1" targetFramework="net40" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
