--- a/fMailer.Web/fMailer.Web.csproj
+++ b/fMailer.Web/fMailer.Web.csproj
@@ -296,6 +296,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\helpers.js" />
     <Content Include="Scripts\jwysiwyg\controls\wysiwyg.image.js" />
