--- a/fMailer.Web/fMailer.Web.csproj
+++ b/fMailer.Web/fMailer.Web.csproj
@@ -350,7 +350,9 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Main\Settings.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
