--- a/fMailer.Web/Web.config
+++ b/fMailer.Web/Web.config
@@ -8,6 +8,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DefaultSessionLiveTime" value="1.00:00:00" />
     <add key="UsePasswordsHashing" value="false" />
+    <add key="FirstNameKeyword" value="%fname%" />
+    <add key="LastNameKeyword" value="%lname%" />
+    <add key="MiddleNameKeyword" value="%mname%" />
+    <add key="FullNameKeyword" value="%fullName%" />
   </appSettings>
   <connectionStrings>
     <add name="fMailerConnectionString" connectionString="Data Source=.;Initial Catalog=fMailer;User ID=sa;Password=access2sql@;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
