--- a/fMailer.SqlUtility/packages.config
+++ b/fMailer.SqlUtility/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="FluentNHibernate" version="1.3.0.733" targetFramework="net45" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
+  <package id="jQuery" version="1.4.4" targetFramework="net45" />
   <package id="NHibernate" version="3.3.2.4000" targetFramework="net45" />
 </packages>
