--- a/fMailer.Web/Web.config
+++ b/fMailer.Web/Web.config
@@ -17,6 +17,7 @@
     <add name="fMailerConnectionString" connectionString="Data Source=.;Initial Catalog=fMailer;User ID=sa;Password=access2sql@;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <httpRuntime requestValidationMode="2.0" maxRequestLength="15728640" />
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
