--- a/fMailer.Web/Web.config
+++ b/fMailer.Web/Web.config
@@ -8,13 +8,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DefaultSessionLiveTime" value="1.00:00:00" />
     <add key="UsePasswordsHashing" value="false" />
-    <add key="FirstNameKeyword" value="%fname%" />
-    <add key="LastNameKeyword" value="%lname%" />
-    <add key="MiddleNameKeyword" value="%mname%" />
-    <add key="FullNameKeyword" value="%fullName%" />
+    <add key="FirstNameKeyword" value="!fname!" />
+    <add key="LastNameKeyword" value="!lname!" />
+    <add key="MiddleNameKeyword" value="!mname!" />
+    <add key="FullNameKeyword" value="!full!" />
   </appSettings>
   <connectionStrings>
-    <add name="fMailerConnectionString" connectionString="Data Source=.;Initial Catalog=fMailer;User ID=sa;Password=access2sql@;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="fMailerConnectionString" connectionString="Data Source=.\SQLExpress;Initial Catalog=fMailer;User ID=sa;Password=access2sql@;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" maxRequestLength="15728640" />
