--- a/fMailer.Web/packages.config
+++ b/fMailer.Web/packages.config
@@ -32,6 +32,7 @@
   <package id="Modernizr" version="2.5.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="NHibernate" version="3.3.2.4000" targetFramework="net40" />
+  <package id="OpenPop.NET" version="2.0.4.369" targetFramework="net40" />
   <package id="RequireJS" version="2.1.1" targetFramework="net40" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
 </packages>
