--- a/fMailer.Domain/fMailer.Domain.csproj
+++ b/fMailer.Domain/fMailer.Domain.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ModelMappings\ContactMapping.cs" />
     <Compile Include="ModelMappings\ContactsGropMapping.cs" />
     <Compile Include="ModelMappings\AttachmentMapping.cs" />
+    <Compile Include="ModelMappings\ReplyAttachmentMapping.cs" />
     <Compile Include="ModelMappings\FailedDeliveryMapping.cs" />
     <Compile Include="ModelMappings\DistributionMapping.cs" />
     <Compile Include="ModelMappings\ForeignKeys.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Model\Attachment.cs" />
     <Compile Include="Model\Contact.cs" />
     <Compile Include="Model\ContactsGroup.cs" />
+    <Compile Include="Model\ReplyAttachment.cs" />
     <Compile Include="Model\FailedDelivery.cs" />
     <Compile Include="Model\Distribution.cs" />
     <Compile Include="Model\IUnique.cs" />
