--- a/fMailer.Web/Web.config
+++ b/fMailer.Web/Web.config
@@ -12,6 +12,7 @@
     <add key="LastNameKeyword" value="!lname!" />
     <add key="MiddleNameKeyword" value="!mname!" />
     <add key="FullNameKeyword" value="!full!" />
+    <add key="OrganizationKeyword" value="!org!" />
   </appSettings>
   <connectionStrings>
     <add name="fMailerConnectionString" connectionString="Data Source=.\SQLExpress;Initial Catalog=fMailer;User ID=sa;Password=access2sql@;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
