--- a/fMailer.Web/Web.config
+++ b/fMailer.Web/Web.config
@@ -7,6 +7,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DefaultSessionLiveTime" value="1.00:00:00" />
+    <add key="AllowMultipleLogins" value="true" />
     <add key="UsePasswordsHashing" value="false" />
     <add key="FirstNameKeyword" value="!fname!" />
     <add key="LastNameKeyword" value="!lname!" />
